2012-05-28  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* mozc-svn 115-2
	- Move mozc_renderer under ibus-mozc

2012-05-28  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* mozc-svn 115-1
	- Fix pkgname of fcitx-mozc-svn
	- Add mozc-fcitx into conflicts=()
	* mozc: upstream update

2012-05-01  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* mozc-svn 111-1
	- Drop scim-mozc according to upstream
	- Drop curl from depends by upstream
	- Get zipcode archives from upstream directly
	- Adapt to build mozc_renderer (experimental)
	* mozc upstream update (r111)

2012-04-12  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* mozc-svn 105-4
	- Rebuild to sync uim 1.8.0

2012-04-06  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* mozc-svn 105-3
	- fix uri of jigyosho-*.zip

2012-03-30  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* mozc-svn 105-2
	* zipcode: upstream update (201203)
	- Change groups to 'mozc-im-svn' to avoid conflict with vanilla mozc

2012-03-28  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* mozc-svn 105-1
	* mozc: upstream update (r105)
	- Apply patch for mozc issue #146
	- Remove gtest from makedepends according to upstream

2012-03-18  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* mozc-svn 96-2
	* Add fcitx-mozc

2012-03-09  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* mozc-svn 96-1
	* mozc: upstream update (r96)
	* uim-mozc: upstream update (r308)
	- Remove protobuf from depends

2012-03-08  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	- Reverted back the makedepends to 'gtest' from 'gmock' by upstream (r103)
	- Apply patch for mozc issue #130

2012-02-12  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* PKGBUILD: new implementation for $QTDIR handling
	- Check and find path of qt4 oneself

2012-02-07  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* mozc-svn 94-3
	- Apply patch to build with ibus>=1.4.0 (mozc issue #117)
