@@ -1,15 +1,15 @@
 # Maintainer: sh4nks <https://github.com/sh4nks/pkgbuilds>
-# Author: abnvolk 
+# Author: abnvolk
 pkgname=cinnamon-theme-elementary-luna
 pkgver=1.4
-pkgrel=1
+pkgrel=2
 pkgdesc="Elementary Luna theme for cinnamon"
 arch=('any')
 url="http://cinnamon-spices.linuxmint.com/themes/view/112"
 license=('unknown')
 depends=('cinnamon' 'ttf-droid')
-source=("http://cinnamon-spices.linuxmint.com/uploads/themes/NYOM-TA9L-JCPK.zip")
-md5sums=('ba3700bf771c75e867f4ffd293e3c3b5')
+source=("http://cinnamon-spices.linuxmint.com/uploads/themes/2H6Z-IAZ0-W6EC.zip")
+md5sums=('54e8046c73e86c2699fbb479d79cf04d')
 
 package() {
   find Elementary* -type f -not -name *~ -exec install -Dm644 '{}' "$pkgdir/usr/share/themes/{}" \;
