@@ -1,15 +1,15 @@
-# Maintainer: sh4nks <sh4nks7@gmail.com>
-# Author: bimsebasse 
+# Maintainer: sh4nks <https://github.com/sh4nks/pkgbuilds>
+# Author: bimsebasse
 pkgname=cinnamon-theme-gnome
-pkgver=1.4
+pkgver=1.6
 pkgrel=1
 pkgdesc="Gnome theme for cinnamon"
 arch=('any')
 url="http://cinnamon-spices.linuxmint.com/themes/view/51"
 license=('unknown')
 depends=('cinnamon')
-source=("http://cinnamon-spices.linuxmint.com/uploads/themes/X93O-5LX7-VCCI.zip")
-md5sums=('22c659df72e977d59456412760972ffe')
+source=("http://cinnamon-spices.linuxmint.com/uploads/themes/O6YC-ERUF-69UX.zip")
+md5sums=('baeeb5cc8531224a94d433550f1caf75')
 
 package() {
   find Gnome -type f -not -name *~ -exec install -Dm644 '{}' "$pkgdir/usr/share/themes/{}" \;
