@@ -6,7 +6,7 @@ pkgdesc="KDE Dolphin plugin for Dropbox"
 arch=('i686' 'x86_64')
 license=('GPL')
 depends=('kdebase-dolphin' 'dropbox')
-makedepends=('hg' 'cmake' 'automoc4')
+makedepends=('mercurial' 'cmake' 'automoc4')
 url="https://bitbucket.org/cancel/dolphin-dropbox-plugin"
 
 _hgroot="https://bitbucket.org/cancel/dolphin-dropbox-plugin"
