@@ -7,15 +7,21 @@
 ## uim and/or fcitx.
 ## If you will not be using ibus, comment out below.
 _ibus_mozc="yes"
+
 ## If you will be using uim, uncomment below.
 #_uim_mozc="yes"
+## If applying patch for uim-mozc fails, try to uncomment below.
+#_kill_kill_line="yes"
+## This will disable the 'kill-line' function of uim-mozc.
+
 ## If you will be using fcitx, uncomment below.
 #_fcitx_mozc="yes"
 
 ## If you will be using mozc.el on Emacs, uncomment below.
 #_emacs_mozc="yes"
 
-## If you don't want to add Japanese zip code, uncomment below.
+## If you don't want to add Japanese zip code into dictionary,
+## comment out below.
 _zipcode="yes"
 
 ## Mozc compile option
@@ -45,8 +51,8 @@ _protobuf_ver=2.4.1
 pkgbase=mozc-svn
 pkgname=mozc-svn
 true && pkgname=('mozc-svn')
-pkgver=115
-pkgrel=2
+pkgver=124
+pkgrel=1
 arch=('i686' 'x86_64')
 url="http://code.google.com/p/mozc/"
 license=('BSD' 'GPL' 'custom')
@@ -58,7 +64,7 @@ sha1sums=('df5867e37a4b51fb69f53a8baf5b994938691d6d')
 
 if [[ "$_ibus_mozc" = "yes" ]]; then
   true && pkgname+=('ibus-mozc-svn')
-  makedepends+=('ibus')
+  makedepends+=('ibus>=1.4.1')
 fi
 if [[ "$_uim_mozc"  = "yes" ]]; then
   true && pkgname+=('uim-mozc-svn')
@@ -76,6 +82,7 @@ fi
 _svntrunk="http://mozc.googlecode.com/svn/trunk/src"
 _svnmod="src"
 
+
 # run qmake -v and check version
 qmake_check_v4() {
   if [[ -x "$1" ]]; then
@@ -85,7 +92,6 @@ qmake_check_v4() {
   fi
   return 1
 }
-
 
 # Checking Qt4 environments
 qt4_check() {
@@ -136,6 +142,7 @@ qt4_check() {
   fi
 }
 
+
 build() {
   msg2 '====================================================='
   msg2 '               *** Build Info ***'
@@ -145,7 +152,6 @@ build() {
     msg "  * ${_p}-${pkgver}-${pkgrel}-${CARCH}${PKGEXT}"
   done
   msg '====================================================='
-
 
   # Check and find Qt4
   qt4_check
@@ -200,7 +206,10 @@ build() {
   if [[ "$_zipcode" = "yes" ]]; then
     curl -fL --retry 3 --retry-delay 3 \
       -O http://www.post.japanpost.jp/zipcode/dl/kogaki/zip/ken_all.zip \
-      -O http://www.post.japanpost.jp/zipcode/dl/jigyosyo/zip/jigyosyo.zip
+      -z ${srcdir}/ken_all.zip
+    curl -fL --retry 3 --retry-delay 3 \
+      -O http://www.post.japanpost.jp/zipcode/dl/jigyosyo/zip/jigyosyo.zip \
+      -z ${srcdir}/jigyosyo.zip
     bsdtar -xf ken_all.zip
     bsdtar -xf jigyosyo.zip
   fi
@@ -213,8 +222,8 @@ build() {
   if [[ "$_uim_mozc" = "yes" ]]; then
     cp -rf "${srcdir}/uim-mozc/uim" unix/
     # kill-line patch
-    patch -p0 -i "${srcdir}/uim-mozc/mozc-kill-line.diff"
-
+    [[ "$_kill_kill_line" != "yes" ]] && \
+      patch -p0 -i "${srcdir}/uim-mozc/mozc-kill-line.diff"
     # Extract license part of uim-mozc
     head -n 32 unix/uim/mozc.cc > unix/uim/LICENSE
   fi
@@ -227,7 +236,7 @@ build() {
   [[ "$_zipcode" = "yes" ]] && \
     python2 dictionary/gen_zip_code_seed.py \
       --zip_code="${srcdir}/KEN_ALL.CSV" --jigyosyo="${srcdir}/JIGYOSYO.CSV" \
-      >> data/dictionary/dictionary09.txt
+      >> data/dictionary_oss/dictionary09.txt
 
   # Copy protobuf to be linked statically
   cp -rf "${srcdir}/protobuf-${_protobuf_ver}" protobuf/files
@@ -248,15 +257,20 @@ build() {
   python2 build_mozc.py build_tools -c $_bldtype -j $_jobs
   python2 build_mozc.py build -c $_bldtype -j $_jobs $_targets
 
-  [[ "$_ibus_mozc" = "yes" ]] && sed -i 's|/usr/libexec/|/usr/lib/ibus-mozc/|g' \
-                                         out_linux/${_bldtype}/obj/gen/unix/ibus/mozc.xml
+  [[ "$_ibus_mozc" = "yes" ]] && \
+    sed -i 's|/usr/libexec/|/usr/lib/ibus-mozc/|g' \
+           out_linux/${_bldtype}/obj/gen/unix/ibus/mozc.xml
 
   if [[ "$_emacs_mozc" = "yes" ]]; then
     cd unix/emacs
     emacs -batch -f batch-byte-compile mozc.el
     cd ~-
   fi
+
+  # Extract liccense part of mozc
+  head -n 28 server/mozc_server.cc > LICENSE
 }
+
 
 package_mozc-svn() {
   pkgdesc="A Japanese Input Method for Chromium OS, Windows, Mac and Linux (the Open Source Edition of Google Japanese Input)"
@@ -270,14 +284,15 @@ package_mozc-svn() {
               'tegaki-models-zinnia-japanese: hand-writing recognition support')
 
   cd "${srcdir}/${_svnmod}-build"
-  install -D -m 755 out_linux/${_bldtype}/mozc_server   "${pkgdir}/usr/lib/mozc/mozc_server"
-  install    -m 755 out_linux/${_bldtype}/mozc_tool     "${pkgdir}/usr/lib/mozc/mozc_tool"
+  install -D -m 755 out_linux/${_bldtype}/mozc_server "${pkgdir}/usr/lib/mozc/mozc_server"
+  install    -m 755 out_linux/${_bldtype}/mozc_tool   "${pkgdir}/usr/lib/mozc/mozc_tool"
 
   install -d "${pkgdir}/usr/lib/mozc/documents/"
   install -m 644 data/installer/*.html "${pkgdir}/usr/lib/mozc/documents/"
 
-  install -D -m 644 debian/copyright "${pkgdir}/usr/share/licenses/${pkgbase}/copyright"
+  install -D -m 644 LICENSE "${pkgdir}/usr/share/licenses/${pkgbase}/LICENSE"
 }
+
 
 package_emacs-mozc-svn() {
   pkgdesc="Mozc for Emacs"
@@ -294,6 +309,7 @@ package_emacs-mozc-svn() {
   install -d "${pkgdir}/usr/share/emacs/site-lisp/emacs-mozc/"
   install -m 644 unix/emacs/mozc.el{,c} "${pkgdir}/usr/share/emacs/site-lisp/emacs-mozc"
 }
+
 
 package_ibus-mozc-svn() {
   pkgdesc="IBus engine module for Mozc"
@@ -320,6 +336,7 @@ package_ibus-mozc-svn() {
   install -D -m 755 out_linux/${_bldtype}/mozc_renderer "${pkgdir}/usr/lib/mozc/mozc_renderer"
 }
 
+
 package_uim-mozc-svn() {
   pkgdesc="uim plugin module for Mozc"
   arch=('i686' 'x86_64')
@@ -341,13 +358,14 @@ package_uim-mozc-svn() {
   install -D -m 644 unix/uim/LICENSE "${pkgdir}/usr/share/licenses/${pkgbase}/uim-mozc/LICENSE"
 }
 
+
 package_fcitx-mozc-svn() {
   pkgdesc="Fcitx module for Mozc"
   arch=('i686' 'x86_64')
   groups=('mozc-im-svn')
   license=('GPL')
   depends=("mozc=${pkgver}" 'fcitx>=4.2.1')
-  conflicta=('mozc-fcitx')
+  conflicta=('fcitx-mozc')
 
   cd "${srcdir}/${_svnmod}-build"
   for mofile in out_linux/${_bldtype}/obj/gen/unix/fcitx/po/*.mo
