@@ -3,21 +3,20 @@
 # Contributor: Florian Richter <Florian_Richter@gmx.de>
 
 pkgname=yacy
-pkgver=1.03
-_pkgextraver=20120619_9000
+pkgver=1.1
+_pkgextraver=20120824_9000
 pkgrel=1
 pkgdesc="Peer to peer search engine"
 arch=('any')
 url=http://www.yacy.net/
 license=(GPL)
-depends=(java-environment sudo)
+depends=(java-environment sudo xorg-server libcups)
 makedepends=(apache-ant)
 install=yacy.install
 source=(http://www.yacy.net/release/yacy_v${pkgver}_${_pkgextraver}.tar.gz
         yacyInit-ArchLinux.patch)
 options=(!emptydirs)
-md5sums=('6201682389dfab628ca839edf5349a3d'
-         '915495273780379b77e5bcdc11377a73')
+
 build()
 {
   . /etc/profile.d/jdk.sh 2>/dev/null || . /etc/profile.d/openjdk6.sh
@@ -41,3 +40,5 @@ package()
   rm -f "$pkgdir"/etc/yacy "$pkgdir"/usr/share/yacy/DATA "$pkgdir"/var/log/yacy
 }
 
+md5sums=('08dd1620a81834296a660190331e15a9'
+         '915495273780379b77e5bcdc11377a73')
