@@ -1,3 +1,12 @@
+2012-09-26  ponsfoot  <cabezon dot hashimoto at gmail dot com>
+
+	* mozc-svn 124-1
+	- Enable to disable uim-mozc's patch
+
+2012-05-29  ponsfoot  <cabezon dot hashimoto at gmail dot com>
+
+	- Fix typo
+
 2012-05-28  ponsfoot  <cabezon dot hashimoto at gmail dot com>
 
 	* mozc-svn 115-2
